# CPostgres

./: .gitignore  CMakeLists.txt  README.md  postgres.c
.cache/clangd/index/: postgres.c.CAB6800D60E6CAA1.idx
